tests/checker/bad/return-bad3.scilla
scilla_version 0

(* Dead code after the return statement is forbidden *)

contract ReturnBad3()

procedure dead_code() -> BNum
  ret = _creation_block;
  _return := ret;
 dead = _creation_block (* Error *)
end
procedure dead_code_fixed() -> BNum
  ret = _creation_block;
  _return := ret
end
